--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,211 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@300;400;600;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav--bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: #B8B5FF;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav--bar .logo{
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #333;
+}
+
+.nav--bar ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+  margin: 10px;
+  gap: 10px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.nav--bar a {
+  text-decoration: none;
+  color: #333;
+}
+
+.nav--bar li {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #333;
+}
+
+.nav--bar a:hover {
+  color: #F36A7B;
+}
+
+.homepage{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 80vh;
+  background-color: #EEEEEE;
 }
 
-.App-link {
-  color: #61dafb;
+.homepage .heading{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 2rem;
+  font-family: "inter", sans-serif;
+  color: #393E46;
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.homepage a{
+  padding: 1rem 2rem;
+  font-family: "inter", sans-serif;
+  color: #F36A7B;
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  background-color: #393E46;
+  border-radius: 15px;
+}
+
+.homepage a:hover{
+  color: #393E46;
+  background-color: #F36A7B;
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 7.6vh;
+  background-color: #393E46;
+  color: #EEEEEE;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+
+.profile{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: #EEEEEE;
+  flex-wrap: wrap;
+}
+
+.profile--data{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: #AAAAAA;
+  padding: 1rem;
+  border-radius: 15px;
+  margin: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 300px;
+}
+
+.profile--data:hover{
+  background-color: #B8B5FF;
+  color: #F36A7B;
+}
+
+.profile--data img{
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.profile--data h1{
+  font-family: "inter", sans-serif;
+  color: #444444;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.about{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 2rem;
+  font-family: "inter", sans-serif;
+  color: #393E46;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.about p{
+  font-family: "inter", sans-serif;
+  color: #393E46;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+.about span{
+  font-family: "poppins", sans-serif;
+  color: #F36A7B;
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  background-color: #393E46;
+}
+
+.pagination{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: #EEEEEE;
+  flex-wrap: wrap;
+}
+
+.pagination button{
+  padding: 1rem 2rem;
+  font-family: "inter", sans-serif;
+  color: #F36A7B;
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  background-color: #393E46;
+  border-radius: 15px;
+}
+
+.pagination button:hover{
+  color: #393E46;
+  background-color: #F36A7B;
+}
+
+.pagination button:disabled{
+  color: #393E46;
+  background-color: #EEEEEE;
 }
