--- a/src/App.css
+++ b/src/App.css
@@ -126,13 +126,14 @@ footer{
   padding: 1rem;
   border-radius: 15px;
   margin: 1rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.1);
   width: 300px;
 }
 
 .profile--data:hover{
   background-color: #B8B5FF;
   color: #F36A7B;
+  box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.1);
 }
 
 .profile--data img{
@@ -189,6 +190,57 @@ footer{
 }
 
 .pagination button{
+  padding: 10px 20px;
+  font-family: "Poppins", sans-serif;
+  color: #F36A7B;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  background-color: #393E46;
+  border-radius: 20px;
+}
+
+.pagination button:hover{
+  color: #393E46;
+  background-color: #F36A7B;
+}
+
+.pagination button:active{
+  color: #393E46;
+  background-color: #EEEEEE;
+}
+
+.pagination button:disabled{
+  color: #393E46;
+  background-color: #EEEEEE;
+}
+
+.error--page{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+  background-color: #EEEEEE;
+}
+
+.error--page h1{
+  font-family: "inter", sans-serif;
+  color: #393E46;
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.error--page p{
+  font-family: "inter", sans-serif;
+  color: #393E46;
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+.error--page a{
   padding: 1rem 2rem;
   font-family: "inter", sans-serif;
   color: #F36A7B;
@@ -198,14 +250,4 @@ footer{
   text-decoration: none;
   background-color: #393E46;
   border-radius: 15px;
-}
-
-.pagination button:hover{
-  color: #393E46;
-  background-color: #F36A7B;
-}
-
-.pagination button:disabled{
-  color: #393E46;
-  background-color: #EEEEEE;
 }
